# WebHD

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  DOCS.md  README.md
.github/workflows/: release.yml
webhd/: CMakeLists.txt  game_mode.cpp  game_mode.h  interactions.cpp  interactions.h  net.cpp  net.h  webhd.cpp  webhd.h
webhd/game_modes/: vs_chat.cpp  vs_chat.h
webhd/ui/: game_mode_browser.cpp  game_mode_browser.h  log.cpp  log.h  settings.cpp  settings.h  target_texture.cpp  target_texture.h  toast.cpp  toast.h
